[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["CtrlHD <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
python-dotenv = "^0.20.0"
Flask = "^2.1.1"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
aiohttp-setup = "^0.2"
ez-aiohttp = "^0.1.0"
lavalink = "^3.1.7"
"slash-discord.py" = "^1.0.5"
timedelta = "^2020.12.3"
discord-pretty-help = "^1.3.4"
orjson = "^3.6.8"
requests = "^2.27.1"
typing-extensions = "^4.2.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"